--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
-  "ignore": ["server/**/*"]
+"installCommand": "npm install --legacy-peer-deps"
 }
