--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@appletosolutions/reactbits": "^1.0.3",
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@react-three/drei": "^10.4.2",
-    "@react-three/fiber": "^9.1.4",
-    "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.22.0",
     "gl-matrix": "^3.4.3",
@@ -29,8 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3",
-    "three": "^0.178.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
